@@ -1,3 +1,9 @@
+2015-11-15  Niels Möller  <nisse@lysator.liu.se>
+
+	* rsa-blind.c: Revert delete in 2015-09-14 change.
+	* rsa.h: Undo deletions.
+	* Makefile.in (hogweed_SOURCES): Readded rsa-blind.c.
+
 2015-09-17  Niels Möller  <nisse@lysator.liu.se>
 
 	* rsa-md5-sign-tr.c (rsa_md5_sign_tr, rsa_md5_sign_digest_tr): New
